# robocol_arm_control

./: Attiny_v3.ino  LICENSE  README.md  package.xml  setup.cfg  setup.py
robocol_arm_control/: ATTinyMaster.py  ATtinyMaster.py
robocol_arm_control/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
robocol_arm_control/log/: latest_build
